# dotfiles

./: .chezmoi.toml.tmpl  .pre-commit-config.yaml  CHANGELOG.md  README.md  dot_env.tmpl  dot_gitconfig  dot_gitconfig.tmpl  dot_p10k.zsh  dot_profile  dot_zshrc  pyproject.toml  run_onchange_install-essentials.sh.tmpl
.chezmoidata/: hyprland-ecosystem.yaml  packages.yaml
.github/workflows/: verify-apply.yml
dotfiles/: .chezmoi.toml.tmpl  dot_aliases  dot_aliases.tmpl  dot_profile  dot_profile.tmpl  dot_zshrc  dot_zshrc.tmpl  run_onchange_00-install-essentials.sh.tmpl  run_onchange_00-system-info.sh.tmpl  run_onchange_01-install-homebrew.sh.tmpl  run_onchange_02-install-rustup.sh.tmpl  run_onchange_10-install_brews.sh.tmpl  run_onchange_10-setup_hyprland.sh.tmpl  run_onchange_11-install-macos-specific.sh.tmpl  run_onchange_12-install-arch-specific.sh.tmpl  run_onchange_13-install-debian-specific.sh.tmpl  run_onchange_14_install-codespaces-specific.sh.tmpl  run_onchange_15_install_latex.sh.tmpl  run_onchange_20-enable-systemd-services.sh.tmpl  run_onchange_21-setup-hyprland.sh.tmpl  run_onchange_22-setup-dashlane-cli.sh.tmpl  run_onchange_23-setup-atuin.sh.tmpl  run_onchange_24-setup-tailscale.sh.tmpl  run_onchange_40-update-git-remote.sh.tmpl  run_onchange_50-show-license-keys.sh.tmpl  run_onchange_90-fastfetch.sh.tmpl  run_onchange_install-essentials.sh.tmpl  run_onchange_update-git-remote.sh.tmpl
dotfiles/.chezmoidata/: hyprland-ecosystem.yaml  packages.yaml
dotfiles/.chezmoitemplates/: functions.tmpl
dotfiles/private_dot_config/: starship.toml
(+52 files in other folders)
