[project]
name = "chezmoi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pre-commit>=4.5.1",
]

[tool.commitizen]
    bump_message             = "bump(release): v$current_version → v$new_version"
    tag_format               = "v$version"
    annotated_tag            = true
    major-version-zero       = true
    update_changelog_on_bump = true
    version_provider         = "uv"
    version_scheme           = "semver"

[dependency-groups]
dev = [
    "commitizen>=4.13.8",
]
